# BackTesting

./: .coverage  .gitignore  AGENTS.md  README.md  dev-notes.md  dev-requirements.txt  main.py  pyproject.toml  readme.md
notebooks/: backtesting_0.1.ipynb  backtesting_0.2.ipynb  backtesting_0.3.py  dataset_cleanup.ipynb  smoke_run_0.1.py
scripts/: setup_env.sh
src/portfolio/: __init__.py  cli.py  core.py  report.py  utils.py
src/portfolio_project.egg-info/: PKG-INFO  SOURCES.txt
src/your_package/: __init__.py  your_module.py
tests/: test_calc_window_returns_date_column.py  test_calc_window_returns_portfolio_columns.py  test_calc_window_returns_window_size.py  test_cli_dividend.py  test_cli_dividend_feature.py  test_cli_format_label.py  test_core.py  test_dividend_portfolio.py  test_identify_windows_window_size.py  test_main_integration.py  test_manual_returns_example.py  test_plot_optional_columns.py  test_plot_returns_plot.py  test_simulate_portfolio_dividend.py  test_simulate_portfolio_leverage.py  test_simulate_portfolio_rebalance_period.py  test_smoke.py  test_summary_statistics.py  test_underlying_portfolio.py
